# AgriConnect

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  init_db.py  package.json  pnpm-lock.yaml  pyproject.toml  run.py
app/: __init__.py  extensions.py
app/core/: config.py
app/models/: __init__.py  contact.py  kyc.py  location.py  message.py  price_and_delivery.py  product.py  user.py
app/services/: __init__.py  upload_service.py
app/static/css/: Contact.css  FarmerDashboard.css  UserDashboard.css  UserLogin.css  UserRegister.css  style.css  style.min.css
app/templates/: 404.html  base.html
app/templates/admin/: add_category.html  analytics.html  base.html  categories.html  dashboard.html  kyc_detail.html  kyc_list.html  price_tracking.html  products.html  users.html
app/templates/auth/: UserLogin.html  login.html  register.html
app/templates/farmer/: base.html  create_product.html  dashboard.html  edit_product.html  list_products.html  submit_kyc.html  view_kyc.html
app/templates/main/: contact.html  index.html
app/templates/messages/: index.html
app/views/: __init__.py
app/views/admin/: __init__.py
app/views/api/: __init__.py
app/views/auth/: __init__.py
app/views/farmer/: __init__.py
app/views/main/: __init__.py
app/views/messages/: __init__.py
docs/: database.markdown
instance/: test.db
scripts/: README.md  add_messaging.py  check_db.py  clear_data.py  migrate_product_messages.py  safe_seed.py
