[project]
name = "agriconnect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "python-dotenv>=1.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
    "email-validator>=2.2.0",
    "bcrypt>=4.3.0",
    "flask-bcrypt>=1.0.1",
    "flask-socketio>=5.5.1",
]
